# ColoredMarchingCubes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
colored_marching_cubes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mesh/: MarchingCubes.cpp  MarchingCubes.h  mat.h
src/: pywrapper.cpp
